Fix tracking feature
