# ServerAPI/src/api/controllers/friend.controller.ts
@@ -3,12 +3,14 @@ import {
   Controller,
   Get,
   Path,
+  Query,
   Request,
   Route,
   Security,
   SuccessResponse,
   Tags,
 } from "tsoa";
+import { injectable } from "tsyringe";
 import { AuthDetailDTO } from "../../application/dtos/auth.dto";
 import { FriendMinimalDTO } from "../../application/dtos/friend.dto";
 import FriendService from "../../application/services/friend.service";
@@ -16,9 +18,9 @@ import {
   responseHandler,
   ResponseSuccessType,
 } from "../middlewares/response.middleware";
-
+@injectable()
 @Tags("Friends")
-@Route("{id}/friends")
+@Route("friends")
 @Security("BearerAuth")
 export class FriendController extends Controller {
   private friendService: FriendService;
@@ -28,14 +30,33 @@ export class FriendController extends Controller {
   }
   @Get("")
   @SuccessResponse("200")
-  public async register(
+  public async getMyFriends(
     @Request() request: ERequest,
-    @Path("id") id: string
+    @Query() page: number,
+    @Query() size: number
   ): Promise<ResponseSuccessType<FriendMinimalDTO>> {
     const response = await this.friendService.getAllMyFriendsMinimal(
       request.user as AuthDetailDTO,
       null,
-      { id: id }
+      { pageNumber: page, pageSize: size },
+
+    );
+    return responseHandler<FriendMinimalDTO>(response);
+  }
+
+
+  @Get("{id}")
+  @SuccessResponse("200")
+  public async getFriendsByID(
+    @Request() request: ERequest,
+    @Path("id") id: string,
+    @Query() page: number,
+    @Query() size: number
+  ): Promise<ResponseSuccessType<FriendMinimalDTO>> {
+    const response = await this.friendService.getAllFriendsMinimal(
+      request.user as AuthDetailDTO,
+      null,
+      { id: id, pageNumber: page, pageSize: size }
     );
     return responseHandler<FriendMinimalDTO>(response);
   }
