# ServerAPI/src/application/services/friend.service.ts
@@ -1,5 +1,5 @@
-import { singleton } from "tsyringe";
-import { FriendListDTO, FriendMinimalDTO } from "../dtos/friend.dto";
+import { inject, singleton } from "tsyringe";
+import { FriendMinimalDTO } from "../dtos/friend.dto";
 import { IDParam, PageParam } from "../dtos/request.dto";
 import { IFriendRepository } from "../interfaces/persistence/friend.repository";
 import { AuthDetailDTO } from "./../dtos/auth.dto";
@@ -7,18 +7,20 @@ import { AuthDetailDTO } from "./../dtos/auth.dto";
 @singleton()
 export default class FriendService {
   private friendRepository: IFriendRepository;
-  constructor(friendRepository: IFriendRepository) {
+  constructor(@inject("IFriendRepository") friendRepository: IFriendRepository) {
     this.friendRepository = friendRepository;
   }
-  async getAllMyFriendsMinimal(
+  async getAllFriendsMinimal(
     currUser: AuthDetailDTO,
     payload: null,
-    params: IDParam
+    params: IDParam & PageParam
   ): Promise<FriendMinimalDTO> {
-    const data = await this.friendRepository.getFriendsByIDMinimal(params.id);
+    const data = await this.friendRepository.getFriendsByIDMinimal(params.id, params.pageSize, params.pageNumber);
     return { friends: [...data.map((friend) => friend.friendId)] };
   }
-  // async getAllMyFriends(currUser: AuthDetailDTO, payload: IDParam & PageParam): Promise<FriendListDTO> {
-  //     return { friends: (await this.friendRepository.getFriendsByID(payload.id, payload.pageSize, payload.pageNumber)) as FriendListDTO }
-  // }
+  async getAllMyFriendsMinimal(currUser: AuthDetailDTO, payload: null, param: PageParam): Promise<FriendMinimalDTO> {
+    const data = await this.friendRepository.getFriendsByIDMinimal(currUser.id, param.pageSize, param.pageNumber);
+    return { friends: [...data.map((friend) => friend.friendId)] };
+  }
+
 }
